2001-08-01  Marius Vollmer  <mvo@zagadka.ping.de>

	* chars.c (scm_char_alphabetic_p, scm_char_numeric_p,
	scm_char_whitespace_p, scm_char_upper_case_p,
	scm_char_lower_case_p, scm_char_is_both_p): Do not require
	characters to fulfill isascii in addition to the primary
	predicate.

2001-07-26  Marius Vollmer  <mvo@zagadka.ping.de>

	* gc_os_dep.c (GC_noop1): Moved into the same #if/#endif context
	where it is needed.

2001-07-25  Gary Houston  <ghouston@arglist.com>

	* numbers.c (scm_logand, scm_logior, scm_logxor): adjusted the
	docstrings to reflect the n-ary implementation.

2001-07-22  Marius Vollmer  <mvo@zagadka.ping.de>

	* tags.h: Include inttypes.h when we have it.

2001-07-13  Marius Vollmer  <mvo@zagadka.ping.de>

	* tags.h (SCM_UNBOUND): Make it the 34th isym/iflag, the 33th slot
	os taken by the new SCM_IM_CALL_WITH_VALUES.
	* print.c (scm_isymnames): Update table accordingly.
	
2001-07-22  Gary Houston  <ghouston@arglist.com>

	* regex-posix.c (s_scm_regexp_exec): use scm_long2num not
	SCM_MAKINUM to convert regoff_t value to SCM.

2001-07-21  Gary Houston  <ghouston@arglist.com>

	* scmsigs.c: include sys/time.h for itimer stuff.

2001-07-18  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* alist.c, arbiters.c, async.h, backtrace.h, boolean.c, chars.c,
	chars.h, continuations.h, debug-malloc.h, dynl.c, feature.c,
	feature.h, filesys.h, fluids.h, fports.h, gc_os_dep.c,
	gdb_interface.h, gh_eval.c, gh_funcs.c, gh_io.c, gh_list.c,
	gh_predicates.c, gsubr.c, gsubr.h, guardians.h,
	guile-func-name-check.in, guile-snarf-docs-texi.in,
	guile-snarf-docs.in, guile-snarf.awk.in, guile-snarf.in,
	hashtab.h, iselect.h, keywords.h, lang.c, list.h, load.h,
	objprop.c, objprop.h, options.c, options.h, random.h,
	regex-posix.h, root.c, root.h, script.c, snarf.h, stackchk.c,
	strerror.c, strop.h, strports.h, threads.h, values.c, values.h,
	version.c, version.h: Updated copyright notice.

2001-07-19  Rob Browning  <rlb@defaultvalue.org>
